fix(link): alignment of the icon relative to the text (#DS-2690) (#163)

--- a/packages/components/link/_link-theme.scss
+++ b/packages/components/link/_link-theme.scss
@@ -156,6 +156,8 @@
         & .kbq-icon {
             line-height: inherit;
             vertical-align: text-bottom;
+            display: inline-flex;
+            align-items: center;
         }
     }
 
